@@ -17,7 +17,7 @@
   html = if scope
     readonly = (@record.readonly? or not @record.authorized_for?(:crud_type => :update))
     crud_type = @record.new_record? ? :create : (readonly ? :read : :update)
-    active_scaffold_render_subform_column(column, scope, crud_type, readonly, !active_scaffold_config.subform.columns.names_without_auth_check.include?(column.name))
+    active_scaffold_render_subform_column(column, scope, crud_type, readonly, !active_scaffold_config.subform.columns.names_without_auth_check.include?(column.name), @record)
   else
     render_column(column, @record, renders_as, scope)
   end
